Kubernetes/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: lab-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 5000
      targetPort: http
