Kubernetes/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: lab-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
