Kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: lab-app
  labels:
    name: app-gateway
spec:
  gatewayClassName: cluster-gateway
  listeners:
  - name: http
    hostname: "myapp.local"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same

  - name: https
    hostname: "myapp.local"
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: myapp-tls
    allowedRoutes:
      namespaces:
        from: Same
