Kubernetes/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp-http-redirect
  namespace: lab-app
spec:
  parentRefs:
    - name: app-gateway
      sectionName: http

  hostnames:
    - myapp.local

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
